# xrandom

./: .gitignore  CMakeLists.txt  build.32.sh  build.64.sh  fbsd-random.h  freebsd-rand.c  freebsd-random.c  freebsd-random.h  glibc-rand.c  glibc-rand_r.c  glibc-random-internal.h  glibc-random.c  glibc-random.h  glibc-random_r.c  linux-random.h  php-random.c  php-random.h  php-xrandom.c  rand.c  random.c  solaris-random.c  solaris-random.h  test-php-xrandom.c  test-xrandom.c  xrandom.c  xrandom.h  zend-random.c  zend-random.h
